# corange-rs

./: .gitignore  Cargo.toml  README.md
examples/: rendering.rs
examples/assets/cello/: cello.bmf  cello.mat
examples/assets/dino/: dino.bmf  dino.mat
examples/assets/imrod/: imrod.bmf  imrod.mat
examples/assets/piano/: piano.bmf  piano.mat
examples/assets/podium/: podium.bmf  podium.mat
src/: build.rs  camera.rs  corange.rs  engine.rs  lib.rs  renderer.rs  viewport.rs
src/corange/: Makefile  README.md
src/corange/include/: cengine.h
src/corange/include/assets/: cmesh.h  config.h  effect.h  font.h  image.h  lang.h  material.h  music.h  renderable.h  shader.h  skeleton.h  sound.h  terrain.h  texture.h
src/corange/include/data/: dict.h  int_hashtable.h  int_list.h  list.h  randf.h  spline.h  vertex_hashtable.h  vertex_list.h
src/corange/include/entities/: animated_object.h  camera.h  instance_object.h  landscape.h  light.h  particles.h  physics_object.h  static_object.h
src/corange/include/rendering/: renderer.h  sky.h
src/corange/include/ui/: ui_browser.h  ui_button.h  ui_dialog.h  ui_listbox.h  ui_option.h  ui_rectangle.h  ui_slider.h  ui_spinner.h  ui_style.h  ui_text.h  ui_textbox.h  ui_toast.h
src/corange/src/: cengine.c
